# Your_Machine_is_My_Machine

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  action_executor.py  config-dev.yaml  config-kali.yaml  config-openai.yaml  config.yaml  dirb_scan.txt  docker-compose.yml  llm_handler.py  package-lock.json  package.json  pentest_agent.py  pyproject.toml  rag_handler.py  requirements.txt  scan.py  test_claude_decision.py
.github/workflow/: deploy-kali.yml
auto_pentest/: __init__.py  agents.py  decision.py  models.py  orchestrator.py  recon.py  reporting.py  scope.py  tooling.py
crawled-data/tmp/: cleaner.py  (+8 more)
docker/: Dockerfile.kali-local  entrypoint.sh
docs/: ADR-01  ADR-01-Simple Coordinator-Specialist Multi-Agent Architecture.md  ADR-02-Layered Runtime Configuration.md  ADR-03-Pre-Cloud Workflow Hardening.md  ADR-04-Shell-Owned VPN Setup and No Python Network Layer.md  ADR-05-CLI Runbook and Auto-Approve Mode.md
pentestagent/: __init__.py  config.py  main.py
results/: agent_state_turn_1.json  agent_state_turn_2.json
scripts/: codex_decision_worker.mjs  codex_exploit_worker.mjs  config_secrets.sh  config_vpn.sh  deploy_kali.sh  preflight.sh
tests/: test_agent_tasks.py  test_approval.py  test_codex_decision.py  test_codex_worker.py  test_command_executor.py  test_config.py  test_decision_coordinator.py  test_decision_engine.py  test_exploit_agent.py  test_graph.py  test_knowledge_base.py  test_langsmith_observability.py  test_llm_openai.py  test_main.py  test_rag.py  test_recon_agent.py  test_reporter.py  test_success.py  test_ui_server.py
(+52 files in other folders)
