[project]
name = "pentestagent"
version = "0.1.0"
description = "Coordinator-specialist pentest agent prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.68.0",
    "chromadb>=1.0.0",
    "langgraph>=0.6.0",
    "pydantic>=2.11.0",
    "pyyaml>=6.0.0",
    "xmltodict>=0.14.0",
]

[project.scripts]
pentestagent = "pentestagent.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = true
constraint-dependencies = [
    "onnxruntime<1.24; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pentestagent*"]

[tool.setuptools.package-data]
pentestagent = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
